Bug 265614 - [Cocoa] MediaCapabilities spatial rendering checks fail on capable HW with built-in sound output
Summary: [Cocoa] MediaCapabilities spatial rendering checks fail on capable HW with bu...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-30 16:08 PST by Eric Carlson
Modified: 2023-12-04 13:09 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2023-11-30 16:08:57 PST
MediaCapabilities spatial rendering checks fail on capable HW with built-in sound output
Comment 1 Eric Carlson 2023-11-30 16:09:11 PST
rdar://114214068
Comment 2 Eric Carlson 2023-12-02 09:36:26 PST
Pull request: https://github.com/WebKit/WebKit/pull/21211
Comment 3 EWS 2023-12-04 13:09:12 PST
Committed 271504@main (f8df1646f208): <https://commits.webkit.org/271504@main>

Reviewed commits have been landed. Closing PR #21211 and removing active labels.